k8s/backend-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: backend
  ports:
    - port: 5330
      targetPort: 5000

    # port - i set it as a random port - it will get routed to port 5000 on the container listening in pod
